[project]
name = "sentinel-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Fellsing",email = "tamirmingal@gmail.com"}
]
requires-python = ">=3.14,<4.0"
dependencies = [
    "fastapi (>=0.136.1,<0.137.0)",
    "pydantic-settings (>=2.14.0,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "passlib[argon2] (>=1.7.4,<2.0.0)",
    "python-jose (>=3.5.0,<4.0.0)",
    "celery (>=5.6.3,<6.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "uvicorn (>=0.46.0,<0.47.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
